# rust-chip8-emulator

./: Cargo.toml  LICENSE  README.md
src/: chip8.rs  constants.rs  emulator.rs  main.rs  media.rs
