[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
rand = "0.8.5"
clap = "3.1.18"

[features]
default = []
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]